Fix TreeView checkboxes alignment in Fiori and Office365 themes. Closes telerik/kendo-ui-core#2306

--- a/styles/web/kendo.common-fiori.less
+++ b/styles/web/kendo.common-fiori.less
@@ -1077,8 +1077,8 @@ span.k-tooltip
     width: 6px;
     height: 6px;
     margin-left: 0;
-    top: 4px;
-    left: 4px;
+    top: 5px;
+    left: 5px;
     transform: none;
 }
 
