--- a/styles/web/kendo.common-material.less
+++ b/styles/web/kendo.common-material.less
@@ -1353,8 +1353,8 @@ form.k-filter-menu .k-textbox {
     height: 10px;
     border-width: 0;
     margin-left: 0;
-    top: 4px;
-    left: 4px;
+    top: 5px;
+    left: 5px;
     transform: none;
     z-index: 2;
 }
