--- a/styles/web/kendo.common-nova.less
+++ b/styles/web/kendo.common-nova.less
@@ -1695,6 +1695,11 @@ form.k-filter-menu .k-textbox {
   left: 4px
 }
 
+.k-checkbox:indeterminate + .k-checkbox-label:after {
+    left: 9px;
+    top: 9px;
+}
+
 //RTL
 .k-rtl .k-widget .k-dropdown-wrap,
 .k-rtl .k-widget .k-picker-wrap,
